Fixed donate hero overlap for 1024+px widths

--- a/scss/donate.scss
+++ b/scss/donate.scss
@@ -30,12 +30,20 @@ $animation-length: 80s;
   height: 100vh;
   z-index: 1;
 }
-@media only screen and (max-width: 767px) {
+
+@media only screen and (min-width: 1024.1px) {
   .hero-clouds {
-    width: 834px;
     height: 663px;
-    left: -100px;
-    top: -26px;
+    left: 0px;
+    top: -5px;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .hero-clouds {
+    height: 850px;
+    left: 0px;
+    top: -5px;
   }
 }
 
@@ -44,6 +52,15 @@ $animation-length: 80s;
     height: 663px;
     left: 0px;
     top: -5px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .hero-clouds {
+    width: 834px;
+    height: 663px;
+    left: -100px;
+    top: -26px;
   }
 }
 
